<resources>
    <string name="app_name">AIIMS_KIOSK</string>
    <string name="aiims_bhopal_is_one_of_the_seven_aiims_apex_healthcare_institutes_being_established_by_the_ministry_of_health_amp_family_welfare_government_of_india_under_the_pradhan_mantri_swasthya_suraksha_yojna_pmssy_with_the_aim_of_correcting_regional_imbalances_in_quality_tertiary_level_healthcare_in_the_country_and_attaining_self_sufficiency_in_graduate_and_postgraduate_medical_education_and_training_the_pmssy_planned_to_set_up_6_new_aiims_like_institutions_in_under_served_areas_of_the_country"><![CDATA[AIIMS Bhopal is one of the seven AIIMS apex healthcare institutes being established by the Ministry of Health & Family Welfare, Government of India under the Pradhan Mantri Swasthya Suraksha Yojna(PMSSY). With the aim of correcting regional imbalances in quality tertiary level healthcare in the country, and attaining self sufficiency in graduate and postgraduate medical education and training the PMSSY planned to set up 6 new AIIMS like institutions in under served areas of the country.]]></string>
    <string name="these_institutions_are_being_established_by_an_act_of_parliament_on_the_lines_of_the_original_all_india_institute_of_medical_sciences_in_new_delhi_which_imparts_both_undergraduate_and_postgraduate_medical_education_in_all_its_branches_and_related_fields_along_with_nursing_and_paramedical_training_to_bring_together_in_one_place_educational_facilities_of_the_highest_order_for_the_training_of_personnel_in_all_branches_of_health_care_activity">These institutions are being established by an Act of Parliament on the lines of the original All India Institute of Medical Sciences in New Delhi which imparts both undergraduate and postgraduate medical education in all its branches and related fields, along with nursing and paramedical training. to bring together in one place educational facilities of the highest order for the training of personnel in all branches of health care activity.</string>
    <string name="medical_services">Medical Services</string>
    <string name="medical_technology">Medical Technology</string>
    <string name="homeScr_intro_Hello">Hello!</string>
    <string name="homeScr_intro_main">Welcome to All India Institute of Medical Sciences(A.I.I.M.S.), Bhopal ! AIIMS is a superspeciality,
     tetriary medical care center. This informatics app here, is meant to spread awareness about AIIMS, it\'s functions and various aspects
    of medical Care.</string>
    <string name="homeScr_intro_main_pt2">If at any time you feel stuck, please tap on the \'?\' button displayed on the top right corner of the screen. Please select one of the
    icons below to get started!</string>
    <string name="docContacts"> The list below summarizes all the detials of the doctors who provide services at AIIMS,Bhopal.
    Please refer, and post any complaints if any name is missing on the list. Thank you!</string>
    <string name="govt_schemes">The Govt. of India spends crores on rupees on health and family welfare planning. This investment is
    also done in the form of various schemes and policies. </string>
    <string name="govt_schemes_2">"Being aware about these shemes can help you save money in different medical treatments, and will also put the Govt. money to good use. Below are some of the health and family welfare schemes launched by the Govt. of India. Please go through them and find out if you are applicable for any. Think! You could reduce your medical bill by a big margin!</string>
    <string name="IGMSY">Indira Gandhi Matritva Sahyog Yojana</string>
    <string name="ICDS">Integrated Child Development Services</string>
    <string name="JSY">Janani Suraksha Yojana</string>
    <string name="MDM">Midday Meal Scheme</string>
    <string name="PMSBY">Pradhan Mantri Suraksha Bima Yojana</string>
    <string name="PMJJBY">Pradhan Mantri Jeevan Jyoti Bima Yojana</string>
    <string name="PMJDY">Pradhan Mantri Jan Dhan Yojana</string>
    <string name="RNTCP">Revised National Tuberculosis Control Program</string>
    <string name="NFSM">National Food Security Mission</string>
    <string name="Fin">Financial Inclusion</string>
    <string name="Food">Food</string>
    <string name="Insurance">Insurance</string>
    <string name="mc">Maternal Care</string>
    <string name="cd">Child Development</string>
    <string name="Health">Health</string>
    <string name="ICDS_intro">Integrated Child Development Services (ICDS) is an Indian government welfare programme which provides food, preschool education, and primary healthcare to children under 6 years of age and their mothers. These services are provided from Anganwadi centres established mainly in rural areas and staffed with frontline workers. In addition to fighting malnutrition and ill health, the programme is also intended to combat gender inequality by providing girls the same resources as boys.</string>
    <string name="IGMSY_elig">"Any woman is entitled to receive the benefit of the Woman must fulfill 4 criteria:\n
        \n
    1.Pregnant women\n
    2.Not less than 19 years old\n
    3.This is her first or second live birth\n
    4.She or her husband does not work in Government / Public Sector Undertaking (Central and State)\n
\n
Anganwadi workers and anganwadi Helpers may also avail the benefit under the Scheme if they are not receiving paid maternity benefits from the Government and fulfill the above-mentioned 4 criteria "</string>
    <string name="Maps_1_intro">AIIMS is situated in the Saket Nagar area of New Bhopal. One can reach the hospital by exiting via a left exit NH-12, and traveling straight for about 2 kms. The map below illustrates AIIMS\'s location:</string>
    <string name="location_maps">1. Location:</string>
    <string name="maps_accessibility">AIIMS is situated at a very convenient location in Bhopal one, that is accessible from almost all other localities. Bhopal Development Authority runs a city wide bus service by the name of \"BRTS\", which consists of a bus corridor that runs through the entirety of Bhopal and links all location together in a network.</string>
    <string name="maps_accessiblity_2">There are other means of travel available, like Taxi and AutoRickshaws. Popular cab companies like Ola, MyCab also run in Bhopal. All Contacts are given below:</string>
    <string name="ambulatory_care_opd">Ambulatory Care - OPD</string>
    <string name="out_reach_family_care">Out-Reach/Family care</string>
    <string name="long_term_chronic_care">Long Term Chronic Care</string>
    <string name="acute_care">Acute Care</string>
    <string name="long_term_acute_care">Long TErm Acute Care</string>
    <string name="surgical_operations">Surgical Operations</string>
    <string name="icu">ICU</string>
    <string name="obstetric_care">Obstetric Care</string>
    <string name="facility_available">FACILITY AVAILABLE</string>
    <string name="general_guidelines_for_opd">GENERAL GUIDELINES FOR OPD</string>
    <string name="new_opd_card_costing_rs_10_and_shall_be_valid_for_10_days_it_can_be_recharged_every_10_days_the_follow_up_visits_within_up_to_10_days_is_free"><![CDATA[->New OPD Card costing Rs. 10/- and shall be valid for 10 days. It can be recharged every 10 days. The follow up visits within up to 10 days is free]]></string>
    <string name="all_clinics_function_between_9_am_and_1_pm_registration_for_new_patients_is_between_8_30_am_and_11_30_am"><![CDATA[-> All Clinics function between 9 am and 1 pm. Registration for new patients is between 8:30 am and 11:30 am]]></string>
    <string name="patients_are_seen_on_first_come_first_serve_basis_however_out_of_turn_consultation_may_be_provided_in_case_of_emergency_or_to_senior_citizens"><![CDATA[->Patients are seen on first come first serve basis. However, out of turn consultation may be provided in case of emergency or to senior citizens.]]></string>
    <string name="you_have_right_to_consult_any_doctor_consultant_for_seeking_appointment_with_any_consultant_on_his_opd_days_you_may_contact_his_her_office"><![CDATA[->You have right to consult any doctor/ consultant. For seeking appointment with any consultant on his OPD days, you may contact his/her office]]></string>
    <string name="for_consultation_in_specialty_and_super_specialty_clinics_you_need_to_have_referred_from_general_opd_of_aiims_bhopal_or_any_government_institution"><![CDATA[->For consultation in Specialty and Super-specialty clinics, you need to have referred from general OPD of AIIMS Bhopal or any Government Institution]]></string>
    <string name="sample_collection_timings_are_8_00_am_to_1_30_am"><![CDATA[->Sample Collection Timings are:- 8:00 AM to 1:30 AM]]></string>
    <string name="only_usg_facilities_are_available_on_upper_ground_floor_at_present_the_expansion_of_services_are_underway_and_shall_be_started_shortly"><![CDATA[->Only USG facilities are available on upper ground floor at present. The expansion of services are underway and shall be started shortly.]]></string>
    <string name="certain_investigations_are_done_free_of_charge_while_others_are_charged_as_per_the_prevailing_norms_fixed_by_government_patients_should_deposit_the_money_only_at_the_designated_hospital_cash_counters_and_obtain_the_proper_receipt"><![CDATA[->Certain investigations are done free of charge while others are charged as per the prevailing norms fixed by Government. Patients should Deposit the money only at the designated hospital Cash Counters and obtain the proper receipt]]></string>
    <string name="the_report_normally_reaches_the_concerned_opd_on_the_next_opd_day"><![CDATA[->The report normally reaches the concerned OPD on the next OPD day]]></string>
    <string name="certain_specialized_investigations_are_done_on_particular_days_only"><![CDATA[->Certain specialized investigations are done on particular days only]]></string>
    <string name="more">more...</string>
    <string name="facility_availabale">FACILITY AVAILABALE</string>
    <string name="the_department_of_cfm_is_providing_outreach_family_care_and_triage_clinic_at_aiims_bhopal_hospital_and_at_phc_ratibadh_amp_chiklod_more_than_2000_families_have_been_attended_to_by_cfm_faculty_medical_officers_medical_students_and_social_workers_these_families_are_on_the_radar_of_cfm_department"><![CDATA[The department of CFM is providing outreach / family care and triage clinic at AIIMS Bhopal hospital and at PHC Ratibadh & Chiklod. More than 2000 families have been attended to by CFM faculty, medical officers, medical students and social workers. These families are on the radar of CFM department.]]></string>
    <string name="services_offered">SERVICES OFFERED</string>
    <string name="routine_basic_care"><![CDATA[->Routine basic care.]]></string>
    <string name="basic_laboratory_services"><![CDATA[->Basic laboratory services]]></string>
    <string name="to_support_state_govt_in_implementation_of_nhps_amp_other_schemes"><![CDATA[->To Support state Govt. In implementation of NHPs. & other schemes]]></string>
    <string name="collaborative_research_to_generate_evidence_to_suit_local_situation"><![CDATA[->Collaborative Research to generate Evidence to suit local situation.]]></string>
    <string name="referral_services"><![CDATA[->Referral services]]></string>
    <string name="teaching_amp_training_to_ugs_pgs_amp_paramdics"><![CDATA[Teaching & Training to UGs, PGs & Paramdics]]></string>
    <string name="clinical_bio_chemistry">Clinical Bio chemistry</string>
    <string name="pathology_amp_lab_medicine"><![CDATA[PATHOLOGY & LAB MEDICINE]]></string>
    <string name="general_medicine">GENERAL MEDICINE</string>
</resources>