<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ps1.bits_pilani.goa.aiims_kiosk.AboutAIIMS"
    android:scaleType = "fitCenter">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src= "@drawable/aiimslogo"
        android:alpha="0.3" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout"></GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/aiims_bhopal_is_one_of_the_seven_aiims_apex_healthcare_institutes_being_established_by_the_ministry_of_health_amp_family_welfare_government_of_india_under_the_pradhan_mantri_swasthya_suraksha_yojna_pmssy_with_the_aim_of_correcting_regional_imbalances_in_quality_tertiary_level_healthcare_in_the_country_and_attaining_self_sufficiency_in_graduate_and_postgraduate_medical_education_and_training_the_pmssy_planned_to_set_up_6_new_aiims_like_institutions_in_under_served_areas_of_the_country"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/these_institutions_are_being_established_by_an_act_of_parliament_on_the_lines_of_the_original_all_india_institute_of_medical_sciences_in_new_delhi_which_imparts_both_undergraduate_and_postgraduate_medical_education_in_all_its_branches_and_related_fields_along_with_nursing_and_paramedical_training_to_bring_together_in_one_place_educational_facilities_of_the_highest_order_for_the_training_of_personnel_in_all_branches_of_health_care_activity"
        android:id="@+id/textView2"
        android:layout_marginTop="38dp"
        android:textColor="#000000"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medical_services"
        android:id="@+id/button4"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/gridLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medical_technology"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
