<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ps1.bits_pilani.goa.aiims_kiosk.MedicalTechnology">

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/pathology_amp_lab_medicine"
        android:id="@+id/button30"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/malaria04"
        android:textColor="#000000" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/clinical_bio_chemistry"
        android:id="@+id/button31"
        android:background="@drawable/malaria02"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/button38"
        android:textColor="#000000" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="MICROBIOLOGY"
        android:id="@+id/button32"
        android:background="@drawable/malaria04"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="ENT"
        android:id="@+id/button33"
        android:background="@drawable/malaria05"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/button31"
        android:layout_toStartOf="@+id/button38" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/general_medicine"
        android:id="@+id/button34"
        android:background="@drawable/malaria02"
        android:layout_alignTop="@+id/button33"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="Neurology &amp;Family Medicine"
        android:id="@+id/button35"
        android:background="@drawable/malaria02"
        android:layout_above="@+id/button36"
        android:layout_alignEnd="@+id/button38" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="Radiology &amp; Pulmonary Medicine"
        android:id="@+id/button36"
        android:background="@drawable/malaria02"
        android:layout_below="@+id/button33"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="pediatrics &amp; obgy"
        android:id="@+id/button37"
        android:background="@drawable/malaria02"
        android:layout_alignTop="@+id/button36"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="dentistry &amp; psychiatry"
        android:id="@+id/button38"
        android:background="@drawable/malaria02"
        android:layout_alignTop="@+id/button37"
        android:layout_toEndOf="@+id/button37"
        android:layout_marginStart="30dp" />
</RelativeLayout>
